k8s/hello-world-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: hello-app-ingress
 namespace: andrazk
 annotations:
   kubernetes.io/ingress.class: nginx
   nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
 rules:
 - host: services.k8s.community
   http:
     paths:
     - path: /andrazk/hello(/|$)(.*)
       backend:
         serviceName: hello-app
         servicePort: 8080
 tls:
 - hosts:
   - services.k8s.community
   secretName: tls-secret
